objects/Activity.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>T_Doctor_Job__c</fullName>
        <description>References the Account Field &quot;[T] Doctor Job&quot;</description>
        <formula>Account.T_Doctor_Job__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>References the Account Field &quot;[T] Doctor Job&quot;. &quot;[T] Doctor Job&quot; combined the fields &quot;Qualification Level&quot; &amp; &quot;Medical Discipline&quot; from Competence Doctor Account .</inlineHelpText>
        <label>[T] Doctor Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aktivity_Date__c</fullName>
        <formula>ActivityDate</formula>
        <label>Aktivity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Person_Account__c</fullName>
        <description>related Account is Person Account</description>
        <formula>Account.IsPersonAccount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Acquisition_Date__c</fullName>
        <description>References the Account Field &quot;Acquisition Date&quot;</description>
        <formula>Account.mkto71_Acquisition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>References the Account Field &quot;Acquisition Date&quot;</inlineHelpText>
        <label>[T] Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>T_Assigned_User_Profil__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Assigned User Profil</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Campaign_Member__c</fullName>
        <label>Link to Campaign Member</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>T_Current_User_Assigned__c</fullName>
        <description>Current User is assigned to the Activity</description>
        <formula>IF( $User.Id   =   Owner:User.Id , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Current User Assigned</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>